# iPSR

./: CMakeLists.txt  README.md
psr/: Allocator.h  Array.h  BSplineData.h  BSplineData.inl  BinaryNode.h  BlockedVector.h  FEMTree.Evaluation.inl  FEMTree.Initialize.inl  FEMTree.IsoSurface.specialized.inl  FEMTree.SortedTreeNodes.inl  FEMTree.System.inl  FEMTree.WeightedSamples.inl  FEMTree.h  FEMTree.inl  Factor.h  Geometry.h  Geometry.inl  MAT.h  MAT.inl  MarchingCubes.h  PPolynomial.h  PPolynomial.inl  Ply.h  PlyFile.h  PlyFile.inl  PointStream.h  PointStream.inl  Polynomial.h  Polynomial.inl  RegularTree.h  RegularTree.inl  SparseMatrix.h  SparseMatrix.inl  SparseMatrixInterface.h  SparseMatrixInterface.inl  Window.h  Window.inl
src/: ipsr.cpp  ipsr.h  main.cpp
src/.VSCodeCounter/2022-08-17_11-43-56/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/psr/: BSplineData.h  FEMTree.Initialize.inl  FEMTree.SortedTreeNodes.inl  FEMTree.System.inl  FEMTree.WeightedSamples.inl  FEMTree.h  FEMTree.inl  RegularTree.h  RegularTree.inl  Window.h  Window.inl
